cleaniup and security fixes

--- a/Milestone 2/infrastructure/dm-milestone2-chart/templates/frontend-deployment.yaml
+++ b/Milestone 2/infrastructure/dm-milestone2-chart/templates/frontend-deployment.yaml
@@ -18,6 +18,12 @@ spec:
         {{- include "dm-milestone2-chart.labels" . | nindent 8 }}
         app.kubernetes.io/component: frontend
     spec:
+      securityContext:
+        runAsNonRoot: true
+        runAsUser: 82  # httpd daemon user
+        fsGroup: 82
+        seccompProfile:
+          type: RuntimeDefault
       {{- with .Values.imagePullSecrets }}
       imagePullSecrets:
         {{- toYaml . | nindent 8 }}
@@ -25,6 +31,12 @@ spec:
       serviceAccountName: {{ include "dm-milestone2-chart.serviceAccountName" . }}
       containers:
         - name: frontend
+          securityContext:
+            allowPrivilegeEscalation: false
+            capabilities:
+              drop:
+                - ALL
+            readOnlyRootFilesystem: false
           image: "{{ .Values.frontend.image.repository }}:{{ .Values.frontend.image.tag }}"
           imagePullPolicy: {{ .Values.frontend.image.pullPolicy }}
           ports:
