--- a/Milestone 2/infrastructure/dm-milestone2-chart/templates/postgres-deployment.yaml
+++ b/Milestone 2/infrastructure/dm-milestone2-chart/templates/postgres-deployment.yaml
@@ -18,12 +18,21 @@ spec:
         {{- include "dm-milestone2-chart.labels" . | nindent 8 }}
         app.kubernetes.io/component: postgres
     spec:
+      securityContext:
+        fsGroup: 999
+        seccompProfile:
+          type: RuntimeDefault
       {{- with .Values.imagePullSecrets }}
       imagePullSecrets:
         {{- toYaml . | nindent 8 }}
       {{- end }}
       containers:
         - name: postgres
+          securityContext:
+            allowPrivilegeEscalation: false
+            capabilities:
+              drop:
+                - ALL
           image: "{{ .Values.postgres.image.repository }}:{{ .Values.postgres.image.tag }}"
           imagePullPolicy: {{ .Values.postgres.image.pullPolicy }}
           env:
