--- a/Milestone 2/infrastructure/dm-milestone2-chart/values.yaml
+++ b/Milestone 2/infrastructure/dm-milestone2-chart/values.yaml
@@ -1,12 +1,6 @@
 # Default values for dm-milestone2-chart.
 # Multi-component release: frontend, backend, postgres, and shared ingress.
 
-singleApp:
-  # Enable to deploy the original single deployment template (disabled for multi-component).
-  enabled: false
-
-# Global replica count (kept for legacy/singleApp templates)
-replicaCount: 1
 # Number of old ReplicaSets to retain per Deployment
 revisionHistoryLimit: 1
 
@@ -34,11 +28,11 @@ frontend:
   replicaCount: 2
   image:
     repository: ghcr.io/david-maat/linux-web-services-frontend
-    tag: latest
+    tag: latest  # Updated by ArgoCD Image Updater
     pullPolicy: Always
   service:
     type: ClusterIP
-    port: 80
+    port: 8080
   resources: {}
   livenessProbe:
     httpGet:
@@ -54,7 +48,7 @@ backend:
   replicaCount: 2
   image:
     repository: ghcr.io/david-maat/linux-web-services-backend
-    tag: latest
+    tag: latest  # Updated by ArgoCD Image Updater
     pullPolicy: Always
   service:
     type: ClusterIP
@@ -73,7 +67,7 @@ backend:
 pgadmin:
   image:
     repository: dpage/pgadmin4
-    tag: latest
+    tag: "8.16"  # Pin to stable version
     pullPolicy: IfNotPresent
   service:
     type: ClusterIP
@@ -90,7 +84,7 @@ pgadmin:
 postgres:
   image:
     repository: postgres
-    tag: 15-alpine
+    tag: "15.11-alpine"  # Pin to specific patch version
     pullPolicy: IfNotPresent
   service:
     type: ClusterIP
@@ -133,52 +127,6 @@ ingress:
     - secretName: milestone2-letsencrypt
       hosts:
         - milestone2.davidmaat.be
-
-# -- Expose the service via gateway-api HTTPRoute
-# Requires Gateway API resources and suitable controller installed within the cluster
-# (see: https://gateway-api.sigs.k8s.io/guides/)
-httpRoute:
-  # HTTPRoute enabled.
-  enabled: false
-  # HTTPRoute annotations.
-  annotations: {}
-  # Which Gateways this Route is attached to.
-  parentRefs:
-    - name: gateway
-      sectionName: http
-      # namespace: default
-  # Hostnames matching HTTP header.
-  hostnames:
-    - chart-example.local
-  # List of rules and filters applied.
-  rules:
-    - matches:
-        - path:
-            type: PathPrefix
-            value: /headers
-  #   filters:
-  #   - type: RequestHeaderModifier
-  #     requestHeaderModifier:
-  #       set:
-  #       - name: My-Overwrite-Header
-  #         value: this-is-the-only-value
-  #       remove:
-  #       - User-Agent
-  # - matches:
-  #   - path:
-  #       type: PathPrefix
-  #       value: /echo
-  #     headers:
-  #     - name: version
-  #       value: v2
-
-# This section is for setting up autoscaling more information can be found here: https://kubernetes.io/docs/concepts/workloads/autoscaling/
-autoscaling:
-  enabled: false
-  minReplicas: 1
-  maxReplicas: 100
-  targetCPUUtilizationPercentage: 80
-  # targetMemoryUtilizationPercentage: 80
 
 nodeSelector: {}
 
